# ros_ws

./: README.md  RVIZ_TESTING_GUIDE.md  demo_rviz.py  fix_rviz_display.py  fixed_robot_view.rviz  model.urdf  quick_test_rviz.py  robot_params.yaml  simple_robot_view.rviz  system_test_report.txt  temp_robot.urdf  test_full_system.py  test_model.py  test_orb_slam3_ai.py  test_rviz.py  test_simple_robot.urdf  test_single_rviz.sh  test_slam_basic.py
install/: local_setup.sh  setup.sh
install/costmap_queue/include/costmap_queue/: costmap_queue.hpp  limited_costmap_queue.hpp  map_based_queue.hpp
install/costmap_queue/share/costmap_queue/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dwb_core/include/dwb_core/: dwb_local_planner.hpp  exceptions.hpp  illegal_trajectory_tracker.hpp  publisher.hpp  trajectory_critic.hpp  trajectory_generator.hpp  trajectory_utils.hpp
install/dwb_core/share/dwb_core/: local_planner_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dwb_critics/include/dwb_critics/: alignment_util.hpp  base_obstacle.hpp  goal_align.hpp  goal_dist.hpp  line_iterator.hpp  map_grid.hpp  obstacle_footprint.hpp  oscillation.hpp  path_align.hpp  path_dist.hpp  prefer_forward.hpp  rotate_to_goal.hpp  twirling.hpp
install/dwb_critics/share/dwb_critics/: default_critics.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dwb_msgs/share/dwb_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dwb_plugins/include/dwb_plugins/: kinematic_parameters.hpp  limited_accel_generator.hpp  one_d_velocity_iterator.hpp  standard_traj_generator.hpp  velocity_iterator.hpp  xy_theta_iterator.hpp
install/dwb_plugins/share/dwb_plugins/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  plugins.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_navigation/share/my_robot_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_navigation/share/my_robot_navigation/cmake/: my_robot_navigationConfig-version.cmake  my_robot_navigationConfig.cmake
install/my_robot_navigation/share/my_robot_navigation/config/: nav2_params.yaml  slam_toolbox_config.yaml
install/my_robot_navigation/share/my_robot_navigation/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_navigation/share/my_robot_navigation/launch/: navigation.launch.py  slam.launch.py  slam_navigation.launch.py
install/my_robot_navigation/share/my_robot_navigation/maps/: my_robot_map.yaml
install/my_robot_navigation/share/my_robot_navigation/scripts/: map_manager.py  save_map.py
install/my_robot_simulation/share/my_robot_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
ros_ws/sm/Apple_Detection.v1i.yolov8/: apple.yaml
slam_training_data/: training_data.json
slam_training_data/raw_datasets/: freiburg1_xyz.tgz_iqtv408.tmp
slam_training_data/simulation_data/: dataset_info.json  training_data.json
sm/Apple_Detection.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
sm/Apple_Detection.v1i.yolov8/train/: labels.cache
sm/Apple_Detection.v1i.yolov8/valid/: labels.cache
sm/exp/: args.yaml
sm/exp2/: args.yaml
sm/exp3/: args.yaml
sm/exp4/: args.yaml  results.csv
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: my_robot_sim.launch.py
src/my_robot_description/rviz/: robot_view.rviz
src/my_robot_description/urdf/: model.config  model.urdf  my_robot.urdf.xacro
src/my_robot_description/worlds/: my_robot_world.world
src/my_robot_navigation/: CMakeLists.txt
src/my_robot_navigation/config/: nav2_params.yaml
src/my_robot_navigation/launch/: navigation.launch.py
src/my_robot_navigation/maps/: my_robot_map.pgm  my_robot_map.yaml
src/my_robot_navigation/scripts/: map_manager.py  save_map.py
src/my_robot_simulation/: CMakeLists.txt
src/my_robot_simulation/config/: simulation_params.yaml
src/my_robot_simulation/launch/: combined.launch.py  my_hex_arena.launch.py
src/my_robot_simulation/worlds/: my_hex_arena.yaml
src/my_robot_vision/: setup.cfg  setup.py
src/orb_slam3_ai/: package.xml  setup.cfg  setup.py
src/orb_slam3_ai/config/: orb_slam3_params.yaml
src/orb_slam3_ai/models/: README.md
src/orb_slam3_ai/orb_slam3_ai/: orb_slam3_ai_node.py  slam_ai_optimizer.py
src/orb_slam3_ai/scripts/: download_datasets.py  generate_training_data.py  improved_train.py  quick_train.py  train_ai_model.py
src/simple_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/simple_robot/worlds/: my_hex_arena.world
(+2387 files in other folders)
