<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1878087979@qq.com">wb</maintainer>
  <license>Apache 2.0</license>

<build_depend>ros_gz_sim</build_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend> ```
**注意：** 我这里多添加了一个 `ros_gz_bridge`，虽然可能不直接用于这个简单的模型，但它在 ROS 2 和 Gazebo 之间进行通信时非常常用，所以一并加上会更稳妥。

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
