<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_navigation</name>
  <version>1.0.0</version>
  <description>SLAM and navigation functionality for my_robot using ROS 2</description>
  <maintainer email="1878087979@qq.com">wb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <!-- Robot and simulation dependencies -->
  <depend>my_robot_description</depend>
  <depend>my_robot_simulation</depend>
  
  <!-- SLAM dependencies -->
  <depend>slam_toolbox</depend>
  <depend>robot_localization</depend>
  
  <!-- Navigation dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_rviz_plugins</depend>
  
  <!-- Sensor and TF dependencies -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Launch and configuration -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_xml</depend>
  <depend>launch_yaml</depend>
  
  <!-- Visualization -->
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>